--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -64,7 +64,7 @@
                         <h5 class="m-2">All users</h5>
                     </div>
                     <div class="row border bg-white pb-2">
-                        <!--                        Таблица-->
+                        <!-- Таблица панели админа -->
                         <table class="table table-borderless m-3">
                             <thead>
                             <tr class="border-top">
@@ -78,7 +78,7 @@
                                 <th> Delete</th>
                             </tr>
                             </thead>
-                            <!--                            Данные-->
+                            <!-- Данные панели админа -->
                             <tbody>
                             <tr class="border-top bg-light" th:each=" user : ${ showAllUsers } ">
                                 <td><h6 th:text="${user.getId()}"/></td>
@@ -114,7 +114,7 @@
                                         </div>
                                     </div>
                                 </td>
-                                <!--                                Модальное окно Изменение данных-->
+                                <!-- Модальное окно редактирования данных-->
                                 <td>
                                     <div class="modal fade" th:id="${'edit-form'+user.id}" tabindex="-1"
                                          aria-labelledby="ModalFormLabel"
@@ -124,7 +124,8 @@
                                                 <div class="modal-header">
                                                     <h5 class="modal-title">Edit user</h5>
                                                     <button type="button" class="btn-close btn-sm"
-                                                            data-bs-dismiss="modal" aria-label="Close"></button>
+                                                            data-bs-dismiss="modal" aria-label="Close">
+                                                    </button>
                                                 </div>
                                                 <form role="form" id="edit-form"
                                                       th:action="@{/admin/edit/{id}(id=${user.id})}"
@@ -137,23 +138,49 @@
                                                                         <label for="user-id"
                                                                                class="col-form-label fw-bold">ID</label>
                                                                         <input type="text" class="form-control"
-                                                                               th:value="${user.id}"
+                                                                               id="user-id" th:value="${user.id}"
                                                                                th:name="id"
                                                                                readonly>
                                                                     </div>
                                                                     <div>
-                                                                        <label for="user-name"
-                                                                               class="col-form-label fw-bold">Name</label>
+                                                                        <label for="user-username"
+                                                                               class="col-form-label fw-bold">U:</label>
                                                                         <input type="text" class="form-control"
-                                                                               th:value="${user.username}"
+                                                                               id="user-username" th:value="${user.username}"
                                                                                th:name="username">
+                                                                    </div>
+
+                                                                    <div>
+                                                                        <label for="user-firstname"
+                                                                               class="col-form-label fw-bold">First name</label>
+                                                                        <input type="text" class="form-control"
+                                                                               id="user-firstname"
+                                                                               th:value="${user.name}"
+                                                                               th:name="name">
+                                                                    </div>
+                                                                    <div>
+                                                                        <label for="user-lastname"
+                                                                               class="col-form-label fw-bold">Last name</label>
+                                                                        <input type="text" class="form-control"
+                                                                               id="user-lastname"
+                                                                               th:value="${user.surName}"
+                                                                               th:name="surName">
                                                                     </div>
                                                                     <div>
                                                                         <label for="user-age"
                                                                                class="col-form-label fw-bold">Age</label>
                                                                         <input type="number" class="form-control"
+                                                                               id="user-age"
                                                                                th:value="${user.age}"
                                                                                th:name="age">
+                                                                    </div>
+                                                                    <div>
+                                                                        <label for="user-email"
+                                                                               class="col-form-label fw-bold">e-mail</label>
+                                                                        <input type="text" class="form-control"
+                                                                               id="user-email"
+                                                                               th:value="${user.email}"
+                                                                               th:name="email">
                                                                     </div>
                                                                     <div>
                                                                         <label for="user-password"
@@ -167,7 +194,7 @@
                                                                         <label for="roles"
                                                                                class="col-form-label fw-bold">Roles</label>
                                                                         <select multiple class="form-control"
-                                                                                th:name="roles">
+                                                                                id="roles" th:name="roles">
                                                                             <option th:each="role : ${roles}"
                                                                                     th:selected="${user.roles.contains(role)}"
                                                                                     th:text="${role.getRole}"
@@ -206,7 +233,7 @@
                                                 </div>
                                                 <form role="form" id="delete-form"
                                                       th:method="DELETE"
-                                                      th:action="@{/admin/delete/{id}(id=${user.getId()})}">
+                                                      th:action="@{/admin/{id}(id=${user.getId()})}">
                                                     <div class="modal-body">
                                                         <div class="myform">
                                                             <div class="container col-6 text-center">
@@ -215,34 +242,49 @@
                                                                         <label for="user-id"
                                                                                class="col-form-label fw-bold">ID</label>
                                                                         <input type="text" class="form-control"
-                                                                               id="user-id" th:value="${user.id}"
+                                                                               th:value="${user.id}"
                                                                                readonly>
                                                                     </div>
                                                                     <div>
-                                                                        <label for="user-name"
-                                                                               class="col-form-label fw-bold">Name</label>
+                                                                        <label for="user-firstname"
+                                                                               class="col-form-label fw-bold">First name</label>
                                                                         <input type="text" class="form-control"
-                                                                               id="user-name"
-                                                                               th:value="${user.username}"
+                                                                               th:value="${user.name}"
+                                                                               readonly>
+                                                                    </div>
+                                                                    <div>
+                                                                        <label for="user-lastname"
+                                                                               class="col-form-label fw-bold">Last name</label>
+                                                                        <input type="text" class="form-control"
+                                                                               th:value="${user.surName}"
                                                                                readonly>
                                                                     </div>
                                                                     <div>
                                                                         <label for="user-age"
                                                                                class="col-form-label fw-bold">Age</label>
                                                                         <input type="text" class="form-control"
-                                                                               id="user-age" th:value="${user.age}"
+                                                                               th:value="${user.age}"
+                                                                               readonly>
+                                                                    </div>
+                                                                    <div>
+                                                                        <label for="user-email"
+                                                                               class="col-form-label fw-bold">e-mail</label>
+                                                                        <input type="text" class="form-control"
+                                                                               th:value="${user.email}"
                                                                                readonly>
                                                                     </div>
                                                                     <div>
                                                                         <label for="roles"
                                                                                class="col-form-label fw-bold">Roles</label>
-                                                                        <select multiple class="form-control" readonly
-                                                                                id="roles" th:name="roles">
+                                                                        <select multiple class="form-control"
+                                                                                th:name="roles">
                                                                             <option th:each="role : ${roles}"
+                                                                                    th:selected="${user.roles.contains(role)}"
                                                                                     th:text="${role.role}"
                                                                                     th:value="${role.id}">
                                                                         </select>
                                                                     </div>
+
                                                                 </div>
                                                             </div>
                                                         </div>
