--- a/src/main/resources/templates/templates/admin.html
+++ b/src/main/resources/templates/templates/admin.html
@@ -99,10 +99,8 @@
                                         <thead>
                                         <tr>
                                             <th>ID</th>
-                                            <th>FirstName</th>
-                                            <th>LastName</th>
+                                            <th>Username</th>
                                             <th>Age</th>
-                                            <th>email</th>
                                             <th>Role</th>
                                             <th>Edit</th>
                                             <th>Delete</th>
@@ -138,21 +136,12 @@
                                                     </div>
 
                                                     <div class="mb-3">
-                                                        <label for="editFirstName"
+                                                        <label for="editUserName"
                                                                class="col-form-label d-flex justify-content-center"><b>UserName</b>:</label>
                                                         <input type="text"
                                                                class="form-control"
-                                                               id="editFirstName"
-                                                               name="firstname">
-                                                    </div>
-
-                                                    <div class="mb-3">
-                                                        <label for="editSurName"
-                                                               class="col-form-label d-flex justify-content-center"><b>UserName</b>:</label>
-                                                        <input type="text"
-                                                               class="form-control"
-                                                               id="editSurName"
-                                                               name="surname">
+                                                               id="editUserName"
+                                                               name="userName">
                                                     </div>
 
                                                     <div class="mb-3">
@@ -162,15 +151,6 @@
                                                                class="form-control"
                                                                id="editAge"
                                                                name="age">
-                                                    </div>
-
-                                                    <div class="mb-3">
-                                                        <label for="editEmail"
-                                                               class="col-form-label d-flex justify-content-center"><b>UserName</b>:</label>
-                                                        <input type="text"
-                                                               class="form-control"
-                                                               id="editEmail"
-                                                               name="email">
                                                     </div>
 
                                                     <div class="mb-3">
@@ -232,21 +212,12 @@
                                                     </div>
 
                                                     <div class="mb-3">
-                                                        <label for="deleteName"
+                                                        <label for="deleteUserName"
                                                                class="col-form-label d-flex justify-content-center"><b>UserName</b>:</label>
                                                         <input readonly type="email"
                                                                class="form-control"
-                                                               id="deleteName"
-                                                               name="name">
-                                                    </div>
-
-                                                    <div class="mb-3">
-                                                        <label for="deleteSurName"
-                                                               class="col-form-label d-flex justify-content-center"><b>UserName</b>:</label>
-                                                        <input readonly type="email"
-                                                               class="form-control"
-                                                               id="deleteSurName"
-                                                               name="surname">
+                                                               id="deleteUserName"
+                                                               name="userName">
                                                     </div>
 
                                                     <div class="mb-3">
@@ -255,16 +226,7 @@
                                                         <input readonly type="number"
                                                                class="form-control"
                                                                id="deleteAge"
-                                                               name="age">
-                                                    </div>
-
-                                                    <div class="mb-3">
-                                                        <label for="deleteEmail"
-                                                               class="col-form-label d-flex justify-content-center"><b>ID</b>:</label>
-                                                        <input disabled type="text"
-                                                               class="form-control"
-                                                               id="deleteEmail"
-                                                               name="email">
+                                                               name="salary">
                                                     </div>
 
                                                     <div class="mb-3">
@@ -302,19 +264,11 @@
                                             <div class="col">
                                                 <form id="newUserForm">
                                                     <div class="mb-3">
-                                                        <label for="newName"
-                                                               class="form-label d-flex justify-content-center"><b>Firstname</b></label>
+                                                        <label for="newUserName"
+                                                               class="form-label d-flex justify-content-center"><b>UserName</b></label>
                                                         <input type="text"
-                                                               class="form-control" id="newName"
-                                                               name="name">
-                                                    </div>
-
-                                                    <div class="mb-3">
-                                                        <label for="newSurname"
-                                                               class="form-label d-flex justify-content-center"><b>LastName</b></label>
-                                                        <input type="text"
-                                                               class="form-control" id="newSurName"
-                                                               name="surname">
+                                                               class="form-control" id="newUserName"
+                                                               name="userName">
                                                     </div>
 
                                                     <div class="mb-3">
@@ -326,16 +280,8 @@
                                                     </div>
 
                                                     <div class="mb-3">
-                                                        <label for="newEmail"
-                                                               class="form-label d-flex justify-content-center"><b>email</b></label>
-                                                        <input type="text"
-                                                               class="form-control" id="newEmail"
-                                                               name="email">
-                                                    </div>
-
-                                                    <div class="mb-3">
                                                         <label for="newPassword"
-                                                               class="form-label d-flex justify-content-center"><b>Password</b></label>
+                                                               class="form-label d-flex justify-content-center"><b>Pass</b></label>
                                                         <input type="password"
                                                                class="form-control"
                                                                id="newPassword" name="password">
@@ -347,7 +293,6 @@
                                                                 name="role" aria-label="size 2 select example">
                                                             <option value="1">ADMIN</option>
                                                             <option value="2">USER</option>
-                                                            <option value="2">GUEST</option>
                                                         </select>
                                                     </div>
                                                     <div class="mb-3 d-flex justify-content-center">
@@ -377,10 +322,8 @@
                             <thead class="table-while">
                             <tr>
                                 <th>ID</th>
-                                <th>Firstname</th>
-                                <th>Lastname</th>
+                                <th>Username</th>
                                 <th>Age</th>
-                                <th>email</th>
                                 <th>Roles</th>
                             </tr>
                             </thead>
@@ -396,8 +339,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
-<script type="text/javascript" src="/scriptJS/admin.js"></script>
-<script type="text/javascript" src="/scriptJS/user.js"></script>
-
+<script type="text/javascript" src="admin.js"></script>
+<script type="text/javascript" src="user.js"></script>
 </body>
 </html>
